# Open-Watercolor-Sim

./: .gitignore  LICENSE  README.md  imgui.ini  pyproject.toml  requirements.txt  watercolor.py
brush/: watercolor_engine.py
demo/: demo.m4v
src/open_watercolor_sim/: __init__.py  viewer.py
src/open_watercolor_sim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/open_watercolor_sim/brush/: __init__.py  configs.py  watercolor_engine.py
